--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.22",
+    "apollo-server": "^2.2.3",
+    "apollo-server-hapi": "^2.0.0-rc.10",
     "autoprefixer": "7.1.6",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "concurrently": "^4.1.0",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -16,14 +20,21 @@
     "file-loader": "1.1.5",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
     "fs-extra": "3.0.1",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
+    "hapi": "^17.8.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "mocha": "^5.2.0",
+    "mongoose": "^5.3.13",
+    "nodemon": "^1.18.6",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.6.3",
+    "react-apollo": "^2.3.1",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.6.3",
     "resolve": "1.6.0",
@@ -46,13 +57,18 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "server": "nodemon server.js",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start\""
   },
   "devDependencies": {
+    "@types/graphql": "^14.0.3",
+    "@types/hapi": "^17.6.4",
     "@types/jest": "^23.3.9",
     "@types/node": "^10.12.10",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
+    "@types/webpack": "^4.4.19",
     "typescript": "^3.1.6"
   },
   "jest": {
